# dsa-supreme

./: CMakeLists.txt  House Robber 198 Leetcode.cpp
Questions/: HackerRank2.cpp  HackerRankTest.cpp
Supreme_One/Arrays/: FindNegatives.cpp
Supreme_One/Basics/: Fancy_Pattern_2.cpp  FindDuplicateNum.cpp  PalindromeNumber.cpp  ReverseNumberLeetcode7.cpp  SetKthBit.cpp  index.cpp  pattern1.cpp
Supreme_One/Binary Search/: FindPivot.cpp  PEak Element.cpp  SearchInSortedAndRotated.cpp
Supreme_One/Demo Cpp/: pattern1.cpp  tempCodeRunnerFile.cpp
Supreme_One/Operator,Loop, and Conditonals/: index.cpp
Supreme_One/Searching & Sorting/: BubbleSort.cpp  InsertionSort.cpp  SelectionSort.cpp
Supreme_Two/: HackerRank_VariableSizeArray.cpp  template.cpp
Supreme_Two/BackTracking and Dnc/: MergeSort.cpp
Supreme_Two/Basics of Maths and Pointer/: OptimizedSieve.cpp  SegmentedSieve.cpp  countsPrimeSum.cpp
Supreme_Two/Binary Tree/: LeftView.cpp  tempCodeRunnerFile.cpp
Supreme_Two/Heap/: Kth Smallest Element.cpp  Leetcode 215 Kth largest element.cpp  Leetcode 958 CheckCompletenesOfBinaryTree.cpp
Supreme_Two/LinkedList/: Add 2 number leetcode 2.cpp
Supreme_Two/Pointers/: Class1.cpp  MyClass1.cpp
Supreme_Two/Queue/: ImpelementQueue.cpp
Supreme_Two/Recursion/: BinarySearch.cpp  CheckIfArrayIsSorted.cpp  Climbing_Stairs_Leetcode_70.cpp  CoinChange.cpp  Maximize the cut segment.cpp  Rat in a maze.cpp  SubsequencesOfString.cpp
Supreme_Two/Stack/: Implement min stack leetcode 155.cpp  Largest Rectangle in Histogram.cpp  NextSmallerElement.cpp  PreviousSmallerElement.cpp
(+31 files in other folders)
