
add_executable(bitwisecodes "Supreme_Two/Patterns and Operators/bitwisecodes.cpp")
add_executable(1 "Supreme_Two/Compiler Working/1.cpp")
add_executable(2 "Supreme_Two/Compiler Working/2.h")

add_executable(MoveAllNegativeToLeft Supreme_One/Arrays/Assignment/MoveAllNegativeToLeft.cpp)
add_executable(main (1) "Supreme_One/Searching/Binary Search 1/main (1).cpp")
add_executable(main (1) "Supreme_One/Searching/Binary Search 1/main (1).cpp")
add_executable(FindPivotIndex "Supreme_Two/Week 3 Assignment/FindPivotIndex.cpp")
add_executable(VariableSizeArray VariableSizeArray.cpp)
add_executable(HackerRankTest Questions/HackerRankTest.cpp)
add_executable(HackerRank2 Questions/HackerRank2.cpp)
add_executable(SegmentedSieve "Supreme_Two/Basics of Maths and Pointer/SegmentedSieve.cpp")